# RandomNets

./: .gitignore  README.md  pyproject.toml
notebooks/: training.ipynb
randomnets/: datamodule.py  model.py
