[project]
name = "randomnets"
version = "0.8.0"
description = "RandomNets is an efficient, vectorized solution for creating and training implicit ensemble feed-forward neural networks, designed to enhance prediction robustness and performance. By introducing input feature masking, RandomNets generates diverse predictions within a single model architecture, making it an attractive alternative to standard feed-forward neural networks. The model is especially suited for molecular property prediction tasks and has demonstrated superior performance across a wide range of bioactivity datasets."
authors = [
  {name = "Esben Jannik Bjerrum", email="esbenbjerrum+cheminformania@gmail.com"}
]

requires-python = ">= 3.8"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "pandas",
    "scikit_mol",
    "pytorch-lightning",
    "scikit-learn"
    ]

[build-system]
requires = ["setuptools>=61.2", "wheel"]

[tool.setuptools.packages.find]
exclude = ["notebooks"]
